# imagecompare

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: package.yml
cmake/: Dependencies.cmake
packaging/linux/: io.github.gimletlove.imagecompare.desktop  io.github.gimletlove.imagecompare.metainfo.xml
src/app/: ApplicationController.cpp  ApplicationController.h  WindowDropFilter.cpp  WindowDropFilter.h  main.cpp
src/core/: ComparisonJobQueue.cpp  ComparisonJobQueue.h  ComparisonResult.h  ComparisonService.cpp  ComparisonService.h  ImageRepository.cpp  ImageRepository.h  ImageSource.cpp  ImageSource.h  SourceIdentity.cpp  SourceIdentity.h  TilePyramid.cpp  TilePyramid.h  ViewState.cpp  ViewState.h  ViewableImageEntry.cpp  ViewableImageEntry.h  ViewableImageListModel.cpp  ViewableImageListModel.h  WorkspaceDocument.cpp  WorkspaceDocument.h
src/ui/: TileTextureCache.cpp  TileTextureCache.h  TiledImageItem.cpp  TiledImageItem.h
src/ui/qml/: Main.qml
src/ui/qml/components/: AppToolbar.qml  ComparisonPaneItem.qml  ComparisonWorkspace.qml  PaneGridInteractionController.qml  PaneHeader.qml  PanesGrid.qml
